---------------------------------------------------------------------------------------------------
Version: 0.69.94
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 0.69.93
Date: 2025-08-08
  Changes:
    - Long stack insterter recipe is no longer locked to Rubia.
    - Rubia pressure 50 hbar => 80 hbar, gravity 2=>2.4 m/s^2. This improves robot energy usage: 4x => 3x.
---------------------------------------------------------------------------------------------------
Version: 0.69.92
Date: 2025-08-04
  Changes:
    - Buffed huge asteroids so sniper turrets cannot kill them. I basically multiplied the HP/flat res of huge asteroids AND railgun ammo by 10x.
    - Nerf: Sniper turret cooldown: 180 => 200 frames. This should minimally affect Rubia, but have a much bigger nerf for super-spamming them in space.
---------------------------------------------------------------------------------------------------
Version: 0.69.91
Date: 2025-08-01
  Changes:
    - Icons for unique compatibility recipes for Krastorio 2 Spaced out are now distinguishable.
    - Vanilla galore continued module recipes are now added to the Moshine-Rubia cross tech.
---------------------------------------------------------------------------------------------------
Version: 0.69.90
Date: 2025-07-28
  Changes:
    - Future-proofed some recipe category changes vs vanilla, as there are plans to replace all the "or" categories. The only material impact this should have is that Corrundum's catalytic plant loses access to holmium craptalysis, which is a recipe it was never supposed to have.
    - Planet portal linked belts now banned from Rubia.
    - Added explicit wind speeds to more mod planets.
    - Crushing industry recycling compat fix about recycling sand.
---------------------------------------------------------------------------------------------------
Version: 0.69.89
Date: 2025-07-27
  Changes: